Bug 433525 - crash [@ nsNavHistoryQueryResultNode::IsContainersQuery()] (r=marco, r=mano, a=schrep)